outsource generation of candles

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 __pycache__/client.cpython-38.pyc
 btcusd-3h.json
+.vscode/.ropeproject/config.py
+.vscode/.ropeproject/objectdb
+.vscode/launch.json
